syntax = "proto3";
package user_service;

import "user.proto";

service UserService {
  rpc create (user.UserCreateRequest) returns (user.UserCreateResponse);

  rpc read (user.UserReadRequest) returns (user.UserReadResponse);
}
